--- a/frontend/src/components/Main/TicketTable/TicketTable.css
+++ b/frontend/src/components/Main/TicketTable/TicketTable.css
@@ -2,16 +2,12 @@
     max-width: 6em;
 }
 
-Table {
-    width: 55vw !important;
-}
-
-tbody tr>td:nth-child(4) {
+tbody tr>td:nth-child(5) {
     display: flex;
     justify-content: space-around;
     width: 9em;
 }
 
-thead tr>th:nth-child(4) {
-    width: 9em;
+tbody tr>td:nth-child(4) input{
+    width: 10em;
 }
