--- a/frontend/src/components/navbar/NavBar.css
+++ b/frontend/src/components/navbar/NavBar.css
@@ -1,15 +1,14 @@
 .bar {
-    width: 15%;
     height: 100vh;
     padding: 1.9em 2em;
 }
 
-p {
+.bar p {
     font-size: 1.5em;
     cursor: pointer;
     padding-left: 0.3em;
 }
 
-p:hover {
+.bar p:hover {
     color: rgb(113, 113, 113);
 }
